--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a style="float:right" href="#" id="login">FB login</a>
 <h2 id="prompt"></h2>
 <div id="answers">
 	<div id="lifestyles">
@@ -18,6 +19,7 @@
 		<ul id="activities_by_lifestyle_list">
 			<li><a data-set="text:name" href="#">Activity 1</a></li>
 		</ul>
+		<a id="escape_hatch" href="#">Can't think of one</a>
 		<form><input placeholder="other..."></form>
 	</div>
 
@@ -45,7 +47,16 @@
 		<li><a href="#">Fresh air</a></li>
 	</div>
 </div>
+
+<hr>
+<div id="tips">
+<h3>Tips</h3>
+</div>
+
 <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script>
+<script type='text/javascript'
+        src='https://cdn.firebase.com/js/simple-login/1.2.3/firebase-simple-login.js'>
+</script>
 <script src="fireball.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.2/zepto.min.js"></script>
 <script src="game-es5.js"></script>
