prompt and begining typeahead stuff

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <a style="float:right" href="#" id="login">FB login</a>
 <style>
 
+#game { max-width: 400; float:left; margin-left: 10px;}
+#graph { max-width: 600; float:left;}
 .link {
   stroke: #C02626;;
   stroke-width: 0.5px;
@@ -23,31 +25,100 @@ text {
 	fill: #4E4E4E;
 }
 
+body {
+	font-family: arial;
+	margin:0;
+}
+
+h1 {
+	color: #999;
+	font-size: 15px;
+	background-color: #eee;
+	padding: 10px;
+}
+}
+
+h2 {
+	text-align: center;
+	font-size: 24px;
+	max-width: 600px;
+	margin:auto;
+}
+
+
+.typeahead,
+.tt-query,
+.tt-hint {
+  width: 396px;
+  height: 30px;
+  padding: 8px 12px;
+  font-size: 24px;
+  line-height: 30px;
+  border: 2px solid #ccc;
+  -webkit-border-radius: 8px;
+     -moz-border-radius: 8px;
+          border-radius: 8px;
+  outline: none;
+}
+
+.typeahead {
+  background-color: #fff;
+}
+
+.typeahead:focus {
+  border: 2px solid #0097cf;
+}
+
+.tt-query {
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.tt-hint {
+  color: #999
+}
+
+.tt-dropdown-menu {
+  width: 422px;
+  margin-top: 12px;
+  padding: 8px 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 8px;
+     -moz-border-radius: 8px;
+          border-radius: 8px;
+  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+          box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+.tt-suggestion {
+  padding: 3px 20px;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.tt-suggestion.tt-cursor {
+  color: #fff;
+  background-color: #0097cf;
+
+}
+
+.tt-suggestion p {
+  margin: 0;
+}
+
+
 </style>
 
-<div id="graph">
-	<svg>
-		<defs>
-	        <marker id="triangle"
-	                viewBox="0 -5 10 10" 
-	                refX="6"
-	                _refY="5"
-	                markerWidth="8" 
-	                markerHeight="8"
-	                orient="auto"
-	                >
-	            <path d="M0,-5L10,0L0,5" fill="#888" />
-		    </marker>
-	    </defs>
-	</svg>
-</div>
-
-
+<h1>Our Lives:  a wikipedia of lifestyle choices</h1>
 
 <div id="game">
 	<h2 id="prompt"></h2>
+	<input type="text" class="typeahead">
 	<div id="answers">
-
 		<div id="lifestyles">
 			<ul id="lifestyles_list">
 				<li><a href="#">
@@ -140,11 +211,33 @@ text {
 	</div>
 </div>
 
+
+
+
+<div id="graph">
+	<svg>
+		<defs>
+	        <marker id="triangle"
+	                viewBox="0 -5 10 10" 
+	                refX="6"
+	                _refY="5"
+	                markerWidth="8" 
+	                markerHeight="8"
+	                orient="auto"
+	                >
+	            <path d="M0,-5L10,0L0,5" fill="#888" />
+		    </marker>
+	    </defs>
+	</svg>
+</div>
+
+
 <script src='https://cdn.firebase.com/v0/firebase.js'></script>
 <script src='https://cdn.firebase.com/js/simple-login/1.2.3/firebase-simple-login.js'></script>
 <script src="fireball.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.2/zepto.min.js"></script>
+<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script src="db.js"></script>
+<script src="http://twitter.github.com/typeahead.js/releases/latest/typeahead.bundle.min.js"></script>
 <script src="ui.js"></script>
 <script src="game-es5.js"></script>
 <script src="http://d3js.org/d3.v3.min.js"></script>
