--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	Our Lives:  collective wisdom about lifestyles and activities
 	<button id="goto_lifestyles_index">Tell us about a lifestyle</button>
 	<button id="goto_activities_index">Tell us about an activity</button>
+	<button id="goto_activities_graph">Graph activities prefs</button>
 </h1>
 
 
@@ -128,7 +129,7 @@
 
 
 
-<div id="graph">
+<div id="graph" class="page">
 	<svg>
 		<defs>
 	        <marker id="triangle"
@@ -153,7 +154,5 @@
 <script src="http://d3js.org/d3.v3.min.js"></script>
 
 <script src="firewidget.js"></script>
-
-<script src="ui.js"></script>
+<script src="graph.js"></script>
 <script src="pages.js"></script>
-<!-- <script src="graph.js"></script> -->
