--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<a style="float:right" href="#" id="login">FB login</a>
-
 <link rel="stylesheet" type="text/css" href="styles.css">
-
+<a style="float:right" href="#" id="login">FB login</a>
 <h1>
 	Our Lives:  collective wisdom about lifestyles and activities
 	<br>
@@ -10,7 +8,6 @@
 	<button id="goto_websites_index">Tell us about a website</button>
 	<button id="goto_activities_graph">Graph activities prefs</button>
 </h1>
-
 
 
 
@@ -175,6 +172,8 @@
 
 
 
+<!-- graphs -->
+
 
 <div id="graph" class="page">
 	<svg>
@@ -194,12 +193,15 @@
 </div>
 
 
+
+
+<!-- javascript -->
+
 <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script src='https://cdn.firebase.com/v0/firebase.js'></script>
 <script src='https://cdn.firebase.com/js/simple-login/1.2.3/firebase-simple-login.js'></script>
 <script src="http://twitter.github.com/typeahead.js/releases/latest/typeahead.bundle.min.js"></script>
 <script src="http://d3js.org/d3.v3.min.js"></script>
-
 <script src="firewidget.js"></script>
 <script src="graph.js"></script>
 <script src="pages.js"></script>
