--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
 		</div>
 		<li><form><input placeholder="Add a city..." id="city_adder" class="fbtypeahead"><input class="submit" type="submit"></form></li>
 	</ul>
+
+	<h3>People who've lived this lifestyle</h3>
+	<ul>
+		<div id="users_list" class="fbobjlist">
+			<li><img data-set="src:fbphoto"></li>
+		</div>
+	</ul>
 </div>
 
 
